spacing for paragraphs and buttons fixed

--- a/assets/styles/theme/_theme.scss
+++ b/assets/styles/theme/_theme.scss
@@ -430,8 +430,7 @@ pre,
 	.page-template-default .entry-content>h4,
 	.page-template-default .entry-content>h5,
 	.page-template-default .entry-content>h6,
-	.page-template-default .entry-content>.wp-block-columns,
-	.page-template-default .entry-content>.wp-block-button {
+	.page-template-default .entry-content>.wp-block-columns {
 		width: 100%;
 		max-width: 100vw;
 	}
@@ -2888,6 +2887,11 @@ screen and (max-height: 300px) {
 	outline-color: $gray-300;
 	outline-width: 1px;
 	outline-style: dotted;
+}
+
+/* add some spacing to block buttons preceded by paragraphs*/
+p~.wp-block-button {
+	margin-top: 20px;
 }
 
 /****************************************************************************************/
